--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-	    "wangaz/laravel-semantic-ui-css": ">=0.3"
+	"wangaz/laravel-semantic-ui-css": ">=0.3",
+	"nesbot/carbon": "~1.21",
+	"laravelcollective/html": "5.5.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
